[package]
name = "miniboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
tera = "1.19.1"
env_logger = "0.10.0"
actix-files = "0.6.2"
serde_yaml = "0.9.25"
sqlx = { version = "0.7.1", features = ["runtime-async-std", "mysql", "time"] }
